tests/NormalTests/paczka1/fuzzy1/31802462.err
Error in line 4: ApBMy69zyh4 S589 81,4
Error in line 10: ApBMy69zyh4 A334 56,9
Error in line 37: IfEhukdL7CD S589 5,0
